Refactor security and logging configurations; enhance database seeding and attendance management
- Removed unused authentication provider and manager from AppConfig.
- Updated DatabaseSeeder to use SLF4J for logging and added profile condition to skip seeding in test environments.
- Simplified SecurityConfig by removing the authentication provider.
- Added grades collection to Enrollment entity.
- Enhanced AttendanceRepository with custom query for counting attendance by enrollment IDs and status.
- Updated EnrollmentRepository with optimized queries for fetching enrollments with joins.
- Improved SubjectRepository with additional methods for counting subjects without teachers.
- Refactored AttendanceService to use user repository for teacher validation and improved absence reconciliation logic.
- Enhanced DashboardService to optimize enrollment and absence counting.
- Updated EvaluationPlanService to simplify plan creation logic and validation.
- Refactored GradeService to streamline grade assignment and validation.
- Improved GradingService to utilize enrollment's grades directly.
- Enhanced ManagementService to count absences more efficiently.
- Updated ReportService to include absence counting in reports.
- Added absence limit retrieval logic to SystemSettingService.
- Updated UserDegreeService to validate request parameters.
- Modified application properties for better configuration management.
- Updated SemesterControllerIntegrationTest to improve error handling and test coverage.
- Added second_execution.log to track build failures and errors.